v0.5.40 Ensure input is not visible while not enabled

--- a/projects/hatool-tester/src/theme.less
+++ b/projects/hatool-tester/src/theme.less
@@ -145,6 +145,12 @@ htl-hatool {
             border: none;
             padding: 2px;
 
+            &:not(.enabled) {
+                font-size: 0px;
+                line-height: 0px;
+                padding: 0;
+            }
+
             input, textarea {
                 font-size: 20px;
             }
